--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "nicegui>=3.4.1",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
+    "pyinstaller>=6.17.0",
     "pywebview>=6.1",
     "xlrd>=2.0.2",
 ]
