--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "ezdxf>=1.4.3",
     "nicegui>=3.4.1",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
