--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "pandas>=2.3.3",
     "psutil>=7.1.3",
     "pyinstaller>=6.17.0",
+    "pyside6>=6.10.1",
     "pywebview>=6.1",
+    "qt-material>=2.17",
     "xlrd>=2.0.2",
 ]
 
